# Advanced-Boy

./: .gitignore  CMakeLists.txt  README.md
Application/: CMakeLists.txt  main.cpp
Application/include/: CMakeLists.txt  EmuThread.hpp  MainWindow.hpp
Application/src/: CMakeLists.txt  EmuThread.cpp  MainWindow.cpp
GBA/: AdvancedBoy.hpp  CMakeLists.txt  Gamepad.hpp
GBA/include/: ARM7TDMI.hpp  AdvancedBoy.hpp  Config.hpp  GameBoyAdvance.hpp
GBA/include/ARM7TDMI/: ARM7TDMI.hpp  ARM_Types.hpp  ArmInstructions.hpp  CpuTypes.hpp  Registers.hpp  ThumbInstructions.hpp
GBA/include/Audio/: APU.hpp  Channel1.hpp  Channel2.hpp  Channel4.hpp  Constants.hpp  DmaAudio.hpp  Registers.hpp  SoundController.hpp
GBA/include/CPU/: ARM7TDMI.hpp  ArmInstructions.hpp  CpuTypes.hpp  Registers.hpp  ThumbInstructions.hpp
GBA/include/Cartridge/: EEPROM.hpp  Flash.hpp  GamePak.hpp  SRAM.hpp
GBA/include/DMA/: DmaChannel.hpp  DmaManager.hpp
GBA/include/GUI/: DebugWindow.hpp  MainWindow.hpp  MemoryViewerWidget.hpp  RegisterViewerWidget.hpp
GBA/include/Gamepad/: GamepadManager.hpp
GBA/include/Graphics/: FrameBuffer.hpp  PPU.hpp  Registers.hpp  VramTypes.hpp
GBA/include/Logging/: Logging.hpp
GBA/include/Memory/: GamePak.hpp  Memory.hpp  MemoryManager.hpp
GBA/include/System/: DmaChannel.hpp  EventScheduler.hpp  GameBoyAdvance.hpp  InterruptManager.hpp  MemoryMap.hpp  SystemControl.hpp
GBA/include/Timers/: Timer.hpp  TimerManager.hpp
GBA/include/Utilities/: CircularBuffer.tpp  Functor.hpp  Functor.tpp  MemoryUtilities.hpp  RingBuffer.hpp  RingBuffer.tpp
GBA/src/: AdvancedBoy.cpp  CMakeLists.txt  GameBoyAdvance.cpp  main.cpp
GBA/src/ARM7TDMI/: ARM7TDMI.cpp  ArmInstructions.cpp  Registers.cpp  ThumbInstructions.cpp
GBA/src/Audio/: APU.cpp  CMakeLists.txt  Channel1.cpp  Channel2.cpp  Channel4.cpp  DmaAudio.cpp  SoundController.cpp
GBA/src/CPU/: ARM7TDMI.cpp  ArmInstructions.cpp  Registers.cpp  ThumbInstructions.cpp
GBA/src/Cartridge/: CMakeLists.txt  EEPROM.cpp  Flash.cpp  GamePak.cpp  SRAM.cpp
GBA/src/DMA/: CMakeLists.txt  DmaChannel.cpp  DmaManager.cpp
GBA/src/GUI/: DebugWindow.cpp  MainWindow.cpp  MemoryViewerWidget.cpp  RegisterViewerWidget.cpp
GBA/src/Gamepad/: GamepadManager.cpp
GBA/src/Graphics/: FrameBuffer.cpp  PPU.cpp
GBA/src/Logging/: ArmInstructionLogging.cpp  CMakeLists.txt  Logging.cpp  ThumbInstructionLogging.cpp
GBA/src/Memory/: GamePak.cpp  MemoryManager.cpp
GBA/src/System/: CMakeLists.txt  DmaChannel.cpp  EventScheduler.cpp  GameBoyAdvance.cpp  InterruptManager.cpp  SystemControl.cpp
GBA/src/Timers/: CMakeLists.txt  Timer.cpp  TimerManager.cpp
GBA/src/Utilities/: CMakeLists.txt  MemoryUtilities.cpp  Utilities.cpp
GBA/src/include/: Config.hpp  MemoryMap.hpp
GBA/src/include/ARM7TDMI/: ARM7TDMI.hpp  ArmInstructions.hpp  CpuTypes.hpp  Registers.hpp  ThumbInstructions.hpp
GBA/src/include/Audio/: Registers.hpp  SoundController.hpp
GBA/src/include/Cartridge/: GamePak.hpp
GBA/src/include/Gamepad/: GamepadManager.hpp
GBA/src/include/Graphics/: FrameBuffer.hpp  PPU.hpp  Registers.hpp  VramTypes.hpp
GBA/src/include/Logging/: Logging.hpp
GBA/src/include/Memory/: Memory.hpp  MemoryManager.hpp
GBA/src/include/System/: DmaChannel.hpp  GameBoyAdvance.hpp  InterruptManager.hpp  MemoryMap.hpp  Scheduler.hpp  Utilities.hpp
GBA/src/include/Timers/: Timer.hpp  TimerManager.hpp
GBA/src/include/Utilities/: CircularBuffer.hpp  Utilities.hpp
GBA/src/src/: AdvancedBoy.cpp  CMakeLists.txt
GBA/src/src/ARM7TDMI/: ARM7TDMI.cpp  ArmInstructions.cpp  CMakeLists.txt  Registers.cpp  ThumbInstructions.cpp
GBA/src/src/Audio/: SoundController.cpp
GBA/src/src/Cartridge/: CMakeLists.txt  GamePak.cpp
GBA/src/src/Gamepad/: CMakeLists.txt  GamepadManager.cpp
GBA/src/src/Graphics/: CMakeLists.txt  FrameBuffer.cpp  PPU.cpp
GBA/src/src/Logging/: ArmInstructionLogging.cpp  Logging.cpp  ThumbInstructionLogging.cpp
GBA/src/src/Memory/: CMakeLists.txt  GamePak.cpp  MemoryManager.cpp
GBA/src/src/System/: CMakeLists.txt  DmaChannel.cpp  GameBoyAdvance.cpp  InterruptManager.cpp  Scheduler.cpp  Utilities.cpp
GBA/src/src/Timers/: Timer.cpp  TimerManager.cpp
GBA/src/src/Utilities/: CMakeLists.txt
